--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/values/strings.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
 
     <string name="action_settings">Settings</string>
     <string name="projectView_name">projectView</string>
+
+    <string name="title_activity_splash__full_screen">Splash_FullScreen</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
