--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/values/strings.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="title_activity_splash__full_screen">Splash_FullScreen</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_3">Tab 3</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
