--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/values/strings.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="tab_text_2">Tab 2</string>
     <string name="tab_text_3">Tab 3</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_gui_about_us">GUI_aboutUs</string>
 </resources>
