--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/values/strings.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/values/strings.xml
@@ -90,4 +90,7 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+
+    <!--Duration for card view animation-->
+    <integer name="swing_anim_time">350</integer>
 </resources>
