--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/values/strings.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/values/strings.xml
@@ -91,6 +91,8 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
 
+    <string name="filter_no_white_space">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>
+
     <!--Duration for card view animation-->
     <integer name="swing_anim_time">350</integer>
     <string name="title_activity_introducton">Introducton</string>
